change files' name and update the information of members

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@ var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
   hm.src = "https://hm.baidu.com/hm.js?7b04bc59130b63646c29f35485a86d97";
-  var s = document.getElementsByTagName("script")[0]; 
+  var s = document.getElementsByTagName("script")[0];
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
@@ -30,7 +30,7 @@ var _hmt = _hmt || [];
       <script type="text/javascript" src="js/html5.js"></script>
    <![endif]-->
 </head>
-<body id="page7">
+<body id="page2">
 <div id="tail-top-right"></div>
 <div id="main-tail-ver">
   <div id="main-tail-top">
@@ -40,7 +40,7 @@ var _hmt = _hmt || [];
         <div id="header-bg">
           <header>
             <h1><a href="index.html"><span>webstudio</span></a></h1>
-            <a href="#" id="twitter"></a> </header>
+             <a href="#" id="twitter"></a>  </header>
         </div>
         <!-- content -->
         <div id="content-bg">
@@ -49,13 +49,13 @@ var _hmt = _hmt || [];
               <div class="wrapper">
                 <article id="column-left">
                   <nav>
-                  <ul>
-                     <li><a href="index.html">Home</a></li>
-                      <li><a href="about.html">About</a></li>
-                      <li><a href="people.html">People</a></li>
-                      <li ><a href="publication.html">Publication</a></li>
-                      <li  class="act"><a href="projects.html">Projects</a></li>
-                     <li ><a href="seminar.html">Group seminar</a></li>
+                    <ul>
+                      <li><a href="index.html">Home</a></li>
+                      <li class="act"><a href="about.html">About</a></li>
+                       <li><a href="people.html">People</a></li>
+                      <li><a href="publication.html">Publication</a></li>
+                      <li ><a href="projects.html">Projects</a></li>
+                      <li><a href="seminar.html">Group seminar</a></li>
                       <li><a href="recruitment.html">Recruitment</a></li>
                       <li><a href="life.html">Life</a></li>
                       <li><a href="contacts.html">Contacts</a></li>
@@ -68,30 +68,23 @@ var _hmt = _hmt || [];
                       <div class="top">
                         <div class="bot">
                           <div class="inner">
-                            <div class="privacy">
-                              <h4 class="extra"> Projects</h4>
-                              <center>
-                              <table width="700" border="2" class=" table-contact ">
-  <tbody>
-    <tr>
-      <td> 
-        <a href="projects/RSVP">&bull; RSVP: A Real-Time Surveillance Video Parsing with Single Frame Supervision</a>
-      </td>
-    </tr>
-    <tr>
-      <td><p></p></td>
-    </tr>
-    <tr>
-      <td> 
-        <a href="http://www.spretarget.com">&bull; Deep Semantic Image Retargeting</a>
-      </td>
-    </tr>
+                            <div class="wrapper">
 
-  </tbody>
-</table>
+                           <p> &nbsp;&nbsp;&nbsp;&nbsp;S-lab (semantic Segmentation Laboratory) is founded on June 12th 2016. We focus on developing human-centric image/video understanding techniques, including human parsing, human pose estimation, human attribute prediction, people re-id etc. S-lab is interested in applying the CV techniques to real applications, such as intelligent makeup system and surveillance video analysis. The lab currently has about 10 members..
+</p>
+<p >&nbsp;&nbsp;&nbsp;&nbsp;S-lab (语义分割实验室) 成立于2016年6月12日。我们致力于以人为中心的图像、视频语义理解技术，包含人像解析，人体姿态估计，人的属性估计，人的身份重验证等。 我们致力于把所研发的技术应用于实际生活中，代表性的工作如智能上妆系统以及视频监控系统。目前S-lab 有10名左右成员。</p>
+<p >&nbsp;&nbsp;&nbsp;&nbsp; Prof. Liu Si, who is the leader of the lab, is an associate professor in Institute of Information Engineering, Chinese Academy of Sciences . She was a visiting professor in Microsoft Research Asia. She used to work with Prof. Shuicheng Yan in National University of Singapore. She obtained Ph.D. degree from Institute of Automation, Chinese Academy of Sciences (CASIA), under the supervision of Prof. Hanqing Lu. She obtained Bachelor degree from Advanced Class of Beijing Institute of Technology (BIT) .
+</p>   <center>
+                              <img src="images/about.jpg"   width="667" height="400"/> </center>
+                              <p>&nbsp; </p>
+                              <div class="clear"></div>
+                              <div class="wrapper">
+                                <article class="col-1">
 
-                              </center>
-                             
+                                  <div class="clear"></div>
+                                </article>
+
+                              </div>
                             </div>
                           </div>
                         </div>
@@ -108,13 +101,13 @@ var _hmt = _hmt || [];
           <footer>
             <div class="inner">
               <div class="wrapper">
-               <div class="block-1">
+                <div class="block-1">
                   <dl class="list-1">
                     <dt>  <img src="images/iie_cas.gif" /></dt>
-                  
+
                   </dl>
                   <p>
-                    <!-- FOOTER_LINK -->
+                    <!-- {%FOOTER_LINK} -->
                   </p>
                 </div>
                 <div class="block-2">
@@ -127,7 +120,6 @@ var _hmt = _hmt || [];
             </div>
           </footer>
         </div>
-        <!-- coded by Alex_D -->
       </div>
     </div>
   </div>
