--- a/recruitment.html
+++ b/recruitment.html
@@ -54,9 +54,9 @@ var _hmt = _hmt || [];
                       <li><a href="about.html">About</a></li>
                       <li><a href="people.html">People</a></li>
                       <li ><a href="publication.html">Publication</a></li>
-                      <li  class="act"><a href="projects.html">Projects</a></li>
+                      <li ><a href="projects.html">Projects</a></li>
                      <li ><a href="seminar.html">Group seminar</a></li>
-                      <li><a href="recruitment.html">Recruitment</a></li>
+                      <li class="act"><a href="recruitment.html">Recruitment</a></li>
                       <li><a href="life.html">Life</a></li>
                       <li><a href="contacts.html">Contacts</a></li>
                     </ul>
@@ -69,24 +69,26 @@ var _hmt = _hmt || [];
                         <div class="bot">
                           <div class="inner">
                             <div class="privacy">
-                              <h4 class="extra"> Projects</h4>
+                              <h4 class="extra"> 招生要求：</h4>
                               <center>
                               <table width="700" border="2" class=" table-contact ">
   <tbody>
     <tr>
       <td> 
-        <a href="projects/RSVP">&bull; RSVP: A Real-Time Surveillance Video Parsing with Single Frame Supervision</a>
-      </td>
+我们欢迎计算机、应用数学、自动化、电子工程系的学生报考我们组。我们要求：</td>
     </tr>
     <tr>
-      <td><p></p></td>
+      <td>1：很好的团队配合能力
+</td>
     </tr>
     <tr>
-      <td> 
-        <a href="http://www.spretarget.com">&bull; Deep Semantic Image Retargeting</a>
-      </td>
+      <td>2：编程能力较强
+</td>
     </tr>
-
+    <tr>
+      <td>3：不怕吃苦，不畏难
+ </td>
+    </tr>
   </tbody>
 </table>
 
@@ -114,7 +116,7 @@ var _hmt = _hmt || [];
                   
                   </dl>
                   <p>
-                    <!-- FOOTER_LINK -->
+                    <!-- {%FOOTER_LINK} -->
                   </p>
                 </div>
                 <div class="block-2">
