--- a/contacts.html
+++ b/contacts.html
@@ -11,7 +11,7 @@ var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
   hm.src = "https://hm.baidu.com/hm.js?7b04bc59130b63646c29f35485a86d97";
-  var s = document.getElementsByTagName("script")[0]; 
+  var s = document.getElementsByTagName("script")[0];
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
@@ -54,11 +54,11 @@ var _hmt = _hmt || [];
                       <li><a href="about.html">About</a></li>
                       <li><a href="people.html">People</a></li>
                       <li ><a href="publication.html">Publication</a></li>
-                      <li  class="act"><a href="projects.html">Projects</a></li>
+                      <li ><a href="projects.html">Projects</a></li>
                      <li ><a href="seminar.html">Group seminar</a></li>
                       <li><a href="recruitment.html">Recruitment</a></li>
                       <li><a href="life.html">Life</a></li>
-                      <li><a href="contacts.html">Contacts</a></li>
+                      <li class="act"><a href="contacts.html">Contacts</a></li>
                     </ul>
                   </nav>
                 </article>
@@ -69,29 +69,39 @@ var _hmt = _hmt || [];
                         <div class="bot">
                           <div class="inner">
                             <div class="privacy">
-                              <h4 class="extra"> Projects</h4>
+                              <h4 class="extra"> LAB LOCATION  / MAIL ADDRESS </h4>
                               <center>
-                              <table width="700" border="2" class=" table-contact ">
+                              <table width="600" border="2" class=" table-contact ">
   <tbody>
     <tr>
-      <td> 
-        <a href="projects/RSVP">&bull; RSVP: A Real-Time Surveillance Video Parsing with Single Frame Supervision</a>
-      </td>
+      <td> S-Lab</td>
     </tr>
     <tr>
-      <td><p></p></td>
+      <td>Road No. 89;</td>
     </tr>
     <tr>
-      <td> 
-        <a href="http://www.spretarget.com">&bull; Deep Semantic Image Retargeting</a>
-      </td>
+      <td>Beijing city Haidian District minzhuang ;</td>
     </tr>
-
+    <tr>
+      <td>China (100864)</td>
+    </tr>
+    <tr>
+      <td>北京市海淀区闵庄路甲89号(100864)</td>
+    </tr>
   </tbody>
 </table>
 
                               </center>
-                             
+                              <h4 class="extra"> EMAIL ADDRESS </h4>
+                              <center><table width="600" border="2" class=" table-contact ">
+  <tbody>
+    <tr>
+      <td> Email: liusi@iie.ac.cn</td>
+    </tr>
+
+  </tbody>
+</table>
+</center>
                             </div>
                           </div>
                         </div>
@@ -111,10 +121,10 @@ var _hmt = _hmt || [];
                <div class="block-1">
                   <dl class="list-1">
                     <dt>  <img src="images/iie_cas.gif" /></dt>
-                  
+
                   </dl>
                   <p>
-                    <!-- FOOTER_LINK -->
+                    <!-- {%FOOTER_LINK} -->
                   </p>
                 </div>
                 <div class="block-2">
