--- a/publication_2016.html
+++ b/publication_2016.html
@@ -11,7 +11,7 @@ var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
   hm.src = "https://hm.baidu.com/hm.js?7b04bc59130b63646c29f35485a86d97";
-  var s = document.getElementsByTagName("script")[0]; 
+  var s = document.getElementsByTagName("script")[0];
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
@@ -30,7 +30,7 @@ var _hmt = _hmt || [];
       <script type="text/javascript" src="js/html5.js"></script>
    <![endif]-->
 </head>
-<body id="page7">
+<body id="page2">
 <div id="tail-top-right"></div>
 <div id="main-tail-ver">
   <div id="main-tail-top">
@@ -40,7 +40,7 @@ var _hmt = _hmt || [];
         <div id="header-bg">
           <header>
             <h1><a href="index.html"><span>webstudio</span></a></h1>
-            <a href="#" id="twitter"></a> </header>
+            <a href="#" id="twitter"></a>  </header>
         </div>
         <!-- content -->
         <div id="content-bg">
@@ -49,49 +49,51 @@ var _hmt = _hmt || [];
               <div class="wrapper">
                 <article id="column-left">
                   <nav>
-                  <ul>
-                     <li><a href="index.html">Home</a></li>
+                    <ul>
+                      <li><a href="index.html">Home</a></li>
                       <li><a href="about.html">About</a></li>
                       <li><a href="people.html">People</a></li>
-                      <li ><a href="publication.html">Publication</a></li>
-                      <li  class="act"><a href="projects.html">Projects</a></li>
-                     <li ><a href="seminar.html">Group seminar</a></li>
-                      <li><a href="recruitment.html">Recruitment</a></li>
-                      <li><a href="life.html">Life</a></li>
+                      <li  class="act"><a href="publication.html">Publication</a></li>
+                      <li ><a href="projects.html">Projects</a></li>
+                     <li><a href="seminar.html">Group seminar</a></li>
+                       <li><a href="recruitment.html">Recruitment</a></li>
+                       <li><a href="life.html">Life</a></li>
                       <li><a href="contacts.html">Contacts</a></li>
                     </ul>
                   </nav>
-                </article>
+                  </article>
                 <article id="column-right">
                   <div class="content-box">
                     <div class="tail">
                       <div class="top">
                         <div class="bot">
                           <div class="inner">
-                            <div class="privacy">
-                              <h4 class="extra"> Projects</h4>
-                              <center>
-                              <table width="700" border="2" class=" table-contact ">
-  <tbody>
-    <tr>
-      <td> 
-        <a href="projects/RSVP">&bull; RSVP: A Real-Time Surveillance Video Parsing with Single Frame Supervision</a>
-      </td>
-    </tr>
-    <tr>
-      <td><p></p></td>
-    </tr>
-    <tr>
-      <td> 
-        <a href="http://www.spretarget.com">&bull; Deep Semantic Image Retargeting</a>
-      </td>
-    </tr>
+                            <div class="wrapper">
+                              <h4> &bull; <a href="publication.html">2017</a> &nbsp;  &bull; <a href="publication_2016.html">2016 &nbsp;</a> &nbsp;  &bull; <a href="publication_2015.html"> 2015</a> &nbsp; &bull; <a href="publication_2014.html"> 2014 and before</a></h4>
 
-  </tbody>
-</table>
+                              <div class="clear"></div>
+                              <div class="wrapper">
+                                  <h4 class="extra">2016</h4>
+                                   <p>------------------------ Book ------------------------</p>
+                                    <p> 1.	Si Liu, Lisa M. Brown, Qiang Chen, Junshi Huang, Luoqi Liu and Shuicheng Yan, Visual Attributes for Fashion Analytics. Chapter in Visual Attributes. R. Feris, C. Lampert, and D. Parikh, Editors. Springer. To appear, 2016. [(Preprint)]</p>
 
-                              </center>
-                             
+                                   <p>------------------------ Journal Papers ------------------------</p>
+<p>1.	Xinyu Ou, Hefei Ling, Si Liu, Jie Lei. Hierarchical Deep Semantic Hashing for Fast Image Retrieval. Multimedia Tools and Applications, 2016</p>
+<p>2.	Wei Wang, Chunping Wang, Si Liu,  Xiaochun Cao, Robust Target Tracking by Online Random Forests and Superpixels, IEEE Transactions on Circuits and Systems for Video Technology (TCSVT) 2016. [(Paper)] </p>
+
+
+<p>------------------------ Conference Papers ------------------------</p>
+<p> 1. Wenqi Ren, Si Liu, Hua Zhang, Jianshan Pan, Xiaochun Cao, Ming-Hsuan Yang, Single Image Dehazing via Multi-Scale Convolutional Neural Networks, ECCV 2016. [Paper]</p>
+<p> 2. Xinyu Ou, Si Liu, Xiaochun Cao, Hefei Ling. Beauty eMakeup: a Deep Makeup Transfer System. ACM MM demo [demo]. [(Paper)]</p>
+<p> 3. Xinyu Ou, Zhen Wei, Si Liu, Xiaochun Cao, Hefei Ling, Deep Multi-Context Network for Fine-Grained Visual Recognition, ICME  2016, Grand Challenge [Paper] </p>
+<p> 4. Si Liu, Xinyu Ou, Ruihe Qian, Wei Wang and Xiaochun Cao, Makeup like a superstar: Deep Localized Makeup Transfer Network, IJCAI 2016 [Paper]</p>
+<p> 5.	Si Liu, Tianzhu Zhang, Changsheng Xu, and Xiaochun Cao, Structural Correlation Filter for Robust Visual Tracking, CVPR 2016 [Paper]</p>
+<p> 6.	Hua Zhang, Si Liu, Changqing Zhang, Wenqi Ren, Xiaochun Cao, SketchNet: Sketch Classification with Web Images, CVPR 2016 [Paper]</p>
+<div class="clear">
+</div>
+
+
+                              </div>
                             </div>
                           </div>
                         </div>
@@ -108,13 +110,13 @@ var _hmt = _hmt || [];
           <footer>
             <div class="inner">
               <div class="wrapper">
-               <div class="block-1">
+              <div class="block-1">
                   <dl class="list-1">
                     <dt>  <img src="images/iie_cas.gif" /></dt>
-                  
+
                   </dl>
                   <p>
-                    <!-- FOOTER_LINK -->
+                    <!-- {%FOOTER_LINK} -->
                   </p>
                 </div>
                 <div class="block-2">
@@ -127,7 +129,6 @@ var _hmt = _hmt || [];
             </div>
           </footer>
         </div>
-        <!-- coded by Alex_D -->
       </div>
     </div>
   </div>
