--- a/life.html
+++ b/life.html
@@ -49,7 +49,7 @@ var _hmt = _hmt || [];
         <!-- header -->
         <div id="header-bg">
           <header>
-            <h1><a href="index.html"><span>webstudio</span></a></h1>  <a href="#" id="twitter"></a> </header>
+            <h1><a href="index.html"><span>webstudio</span></a></h1>  <a href="#" id=""></a> </header>
         </div>
         <!-- content -->
         <div id="content-bg">
