--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@ var _hmt = _hmt || [];
         <div id="header-bg">
           <header>
             <h1><a href="index.html"><span>webstudio</span></a></h1>
-            <a href="#" id="twitter"></a> </header>
+            <a href="#" id=""></a> </header>
         </div>
         <!-- content -->
         <div id="content-bg">
