update the seminar and the member information

--- a/seminar.html
+++ b/seminar.html
@@ -80,6 +80,41 @@ var _hmt = _hmt || [];
                                   <td><strong>Topic & Slides</strong></td>
                                 </tr>
                                 <tr>
+                                  <td><p> Thursday, 12 October 2017, 19:00</p></td>
+                                  <td><small>Han Yu(庾涵)</small></td>
+                                  <td><i><a href="http://pan.baidu.com/s/1nvqUjqx"> Deep Image Harmonization </a></i></td>
+                                </tr>
+                                <tr>
+                                  <td><p> Thursday, 12 October 2017, 19:00</p></td>
+                                  <td><small>Chen Gao(高晨);Tianrui Hui(惠天瑞)</small></td>
+                                  <td><i><a href="http://pan.baidu.com/s/1sla6Ylv"> Detangling People: Individuating Multiple Close People and Their Body Parts via Region Assembly </a></i></td>
+                                </tr>
+                                <tr>
+                                  <td><p> Thursday, 12 October 2017, 19:00</p></td>
+                                  <td><small>Renda Bao(任乐健)</small></td>
+                                  <td><i><a href="http://pan.baidu.com/s/1nuK0hML"> HydraPlus-Net: Attentive Deep Features for Pedestrian Analysis </a></i></td>
+                                </tr>
+                                <tr>
+                                  <td><p> Thursday, 12 October 2017, 19:00</p></td>
+                                  <td><small>Renda Bao(包仁达)</small></td>
+                                  <td><i><a href="http://pan.baidu.com/s/1i4SFKSP"> Fine-grained Recognition in the Wild: A Multi-Task Domain Adaptation Approach </a></i></td>
+                                </tr>
+                                <tr>
+                                  <td><p> Friday, 29 September 2017, 19:00</p></td>
+                                  <td><small>Renda Bao(包仁达)</small></td>
+                                  <td><i><a href="http://pan.baidu.com/s/1eRV3H2E"> Be Your Own Prada: Fashion Synthesis with Structural Coherence </a></i></td>
+                                </tr>
+                                <tr>
+                                  <td><p> Friday, 29 September 2017, 19:00</p></td>
+                                  <td><small>Lejian Ren(任乐健)</small></td>
+                                  <td><i><a href="http://pan.baidu.com/s/1eSy9WaA"> Holistic, Instance-level Human Parsing </a></i></td>
+                                </tr>
+                                <tr>
+                                  <td><p> Friday, 29 September 2017, 19:00</p></td>
+                                  <td><small>Ruihe Qian(钱瑞和)</small></td>
+                                  <td><i><a href="http://pan.baidu.com/s/1dE5hy61"> Large Kernel Matters-Improve Semantic Segmentation by Global Convolutional Network</a></i></td>
+                                </tr>
+                                <tr>
                                   <td><p> Friday, 22 September 2017, 19:00</p></td>
                                   <td><small>Ruihe Qian(钱瑞和)</small></td>
                                   <td><i><a href="http://pan.baidu.com/s/1cm6cZc"> The Basics of Video Object Segmentation</a></i></td>
