--- a/student.html
+++ b/student.html
@@ -106,8 +106,8 @@ var _hmt = _hmt || [];
    <tr>
       <td> &nbsp; &nbsp; &bull; Research Direction:</td>
     </tr>
-   <tr> <td> &nbsp; &nbsp; &nbsp; Weakly Supervised </td> </tr>
-    <tr> <td> &nbsp; &nbsp; &nbsp; Semantic Segmentation </td> </tr>
+   <tr> <td> &nbsp; &nbsp; &nbsp; Makeup Transfer </td> </tr>
+    <tr> <td> &nbsp; &nbsp; &nbsp; </td> </tr>
     <tr> <td> &nbsp; &nbsp; &nbsp; </td> </tr>
     <tr> <td> &nbsp; &nbsp; &nbsp; </td> </tr>
    </tbody>
@@ -375,7 +375,7 @@ var _hmt = _hmt || [];
    <tr>
       <td> &nbsp; &nbsp; &bull; Research Direction:</td>
     </tr>
-   <tr> <td> &nbsp; &nbsp; &nbsp; </td> </tr>
+   <tr> <td> &nbsp; &nbsp; &nbsp; multile people segmentation</td> </tr>
     <tr> <td> &nbsp; &nbsp; &nbsp; </td> </tr>
     <tr> <td> &nbsp; &nbsp; &nbsp; </td> </tr>
     <tr> <td> &nbsp; &nbsp; &nbsp; </td> </tr>
@@ -404,7 +404,36 @@ var _hmt = _hmt || [];
    <tr>
       <td> &nbsp; &nbsp; &bull; Research Direction:</td>
     </tr>
-   <tr> <td> &nbsp; &nbsp; &nbsp; </td> </tr>
+   <tr> <td> &nbsp; &nbsp; &nbsp; multile people segmentation</td> </tr>
+    <tr> <td> &nbsp; &nbsp; &nbsp; </td> </tr>
+    <tr> <td> &nbsp; &nbsp; &nbsp; </td> </tr>
+    <tr> <td> &nbsp; &nbsp; &nbsp; </td> </tr>
+   </tbody>
+</table>
+<p>&nbsp; </p>
+ <table width="240"  height="205" border="2" class="table-img" >
+  <tbody>
+    <tr>
+      <td>  <img src="images/caixiaofan.jpg" alt="" width="227" height="230"/></td>
+    </tr>
+  </tbody>
+</table>
+<table width="400" border="2" class="table-people">
+  <tbody>
+  <tr> <td> &nbsp; &nbsp; &nbsp; </td> </tr>
+   <tr>
+      <td> &nbsp; &nbsp; &bull; Xiaofan Cai
+
+</td>
+    </tr>
+   <tr>
+      <td> &nbsp; &nbsp; &bull;  Masters
+</td>
+    </tr>
+   <tr>
+      <td> &nbsp; &nbsp; &bull; Research Direction:</td>
+    </tr>
+   <tr> <td> &nbsp; &nbsp; &nbsp; pose estimation</td> </tr>
     <tr> <td> &nbsp; &nbsp; &nbsp; </td> </tr>
     <tr> <td> &nbsp; &nbsp; &nbsp; </td> </tr>
     <tr> <td> &nbsp; &nbsp; &nbsp; </td> </tr>
