update the seminar and adjust the css setting to prettify the seminar page

--- a/seminar.html
+++ b/seminar.html
@@ -86,7 +86,7 @@ var _hmt = _hmt || [];
                                 </tr>
                                 <tr>
                                   <td><p> Thursday, 12 October 2017, 19:00</p></td>
-                                  <td><small>Chen Gao(高晨);Tianrui Hui(惠天瑞)</small></td>
+                                  <td><small>Chen Gao(高晨);<br/>Tianrui Hui(惠天瑞)</small></td>
                                   <td><i><a href="http://pan.baidu.com/s/1sla6Ylv"> Detangling People: Individuating Multiple Close People and Their Body Parts via Region Assembly </a></i></td>
                                 </tr>
                                 <tr>
