update the seminar

--- a/seminar.html
+++ b/seminar.html
@@ -100,6 +100,26 @@ var _hmt = _hmt || [];
                                   <td><i><a href="http://pan.baidu.com/s/1i4SFKSP"> Fine-grained Recognition in the Wild: A Multi-Task Domain Adaptation Approach </a></i></td>
                                 </tr>
                                 <tr>
+                                  <td><p> Sunday, 8 October 2017, 19:00</p></td>
+                                  <td><small>Ruihe Qian(钱瑞和)</small></td>
+                                  <td><i><a href="http://pan.baidu.com/s/1pLHU67L"> CREST: Convolutional Residual Learning for Visual Tracking </a></i></td>
+                                </tr>
+                                <tr>
+                                  <td><p> Sunday, 8 October 2017, 19:00</p></td>
+                                  <td><small>Guanghui Ren(任广辉)</small></td>
+                                  <td><i><a href="http://pan.baidu.com/s/1dFPawG5"> Semantic Jitter: Dense Supervision for Visual Comparisons via Synthetic Images  </a></i></td>
+                                </tr>
+                                <tr>
+                                  <td><p> Sunday, 8 October 2017, 19:00</p></td>
+                                  <td><small>Defa Zhu(朱德发)</small></td>
+                                  <td><i><a href="http://pan.baidu.com/s/1bpi1eEz"> Adversarial Examples for Semantic Segmentation and Object Detection  </a></i></td>
+                                </tr>
+                                <tr>
+                                  <td><p> Sunday, 8 October 2017, 19:00</p></td>
+                                  <td><small>Yue Liao(廖越)</small></td>
+                                  <td><i><a href="http://pan.baidu.com/s/1eRSLSfK"> Towards Real World Human Parsing:Multiple-Human Parsing in the Wild  </a></i></td>
+                                </tr>
+                                <tr>
                                   <td><p> Friday, 29 September 2017, 19:00</p></td>
                                   <td><small>Renda Bao(包仁达)</small></td>
                                   <td><i><a href="http://pan.baidu.com/s/1eRV3H2E"> Be Your Own Prada: Fashion Synthesis with Structural Coherence </a></i></td>
