--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@ var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
   hm.src = "https://hm.baidu.com/hm.js?7b04bc59130b63646c29f35485a86d97";
-  var s = document.getElementsByTagName("script")[0]; 
+  var s = document.getElementsByTagName("script")[0];
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
@@ -74,7 +74,7 @@ var _hmt = _hmt || [];
                               <table width="700" border="2" class=" table-contact ">
   <tbody>
     <tr>
-      <td> 
+      <td>
         <a href="projects/RSVP">&bull; RSVP: A Real-Time Surveillance Video Parsing with Single Frame Supervision</a>
       </td>
     </tr>
@@ -82,8 +82,16 @@ var _hmt = _hmt || [];
       <td><p></p></td>
     </tr>
     <tr>
-      <td> 
+      <td>
         <a href="http://www.spretarget.com">&bull; Deep Semantic Image Retargeting</a>
+      </td>
+    </tr>
+    <tr>
+      <td><p></p></td>
+    </tr>
+    <tr>
+      <td>
+        <a href="projects/TT">&bull; Time Traveler: a real-time face aging system</a>
       </td>
     </tr>
 
@@ -91,7 +99,7 @@ var _hmt = _hmt || [];
 </table>
 
                               </center>
-                             
+
                             </div>
                           </div>
                         </div>
@@ -111,7 +119,7 @@ var _hmt = _hmt || [];
                <div class="block-1">
                   <dl class="list-1">
                     <dt>  <img src="images/iie_cas.gif" /></dt>
-                  
+
                   </dl>
                   <p>
                     <!-- FOOTER_LINK -->
