--- a/projects.html
+++ b/projects.html
@@ -91,7 +91,7 @@ var _hmt = _hmt || [];
     </tr>
     <tr>
       <td>
-        <a href="projects/TT">&bull; Time Traveler: a real-time face aging system</a>
+        <a href="projects/FaceAging">&bull; Time Traveler: a real-time face aging system</a>
       </td>
     </tr>
 
