--- a/projects/FaceAging.html
+++ b/projects/FaceAging.html
@@ -95,7 +95,8 @@ var _hmt = _hmt || [];
       </video>
     </div>
   </div>
-
+<h3>Details</h3>
+  <a href="https://pan.baidu.com/s/1eSGk3jc">PPT</a>(pwd: ic9u)
 
 
 
