--- a/projects/FaceAging.html
+++ b/projects/FaceAging.html
@@ -80,9 +80,19 @@ var _hmt = _hmt || [];
   <ol>
     <li>Lejian Ren, Si Liu, Yao Sun, Jian Dong, Luoqi Liu, Shuicheng Yan</li>
   </ol>
-  <h3></h3>
+  <h3>Introduction </h3>
   <p>
-    &nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;Face aging, also known as age progression, is attracting more and
+more research interests. It has plenty of applications in various
+domains including cross-age face recognition, nding lost children,
+and entertainments. In recent years, face aging has witnessed various
+breakthroughs and a number of face aging models have been
+proposed [3]. Face aging, however, is still a very challenging task in
+practice for various reasons. First, faces may have many dierent
+expressions and lighting conditions, which pose great challenges to
+modeling the aging patterns. Besides, the training data are usually
+very limited and the face images for the same person only cover a
+narrow range of ages.
   </p>
   <h3>Demo</h3>
   <div class="image-wrapper" >
