--- a/projects/FaceAging.html
+++ b/projects/FaceAging.html
@@ -94,6 +94,11 @@ modeling the aging patterns. Besides, the training data are usually
 very limited and the face images for the same person only cover a
 narrow range of ages.
   </p>
+  <h3>FrameWork</h3>
+
+<div class="image-wrapper first">
+    <img src="../images/projects/FaceAging/frame.png"  width="600px"/>
+  </div>
   <h3>Demo</h3>
   <div class="image-wrapper" >
     <div class="image featured">
@@ -107,9 +112,15 @@ narrow range of ages.
   </div>
 <h3>Details</h3>
   <a href="https://pan.baidu.com/s/1eSGk3jc">PPT</a>(pwd: ic9u)
-
-
-
+<h3>References</h3>
+<ul>
+  <li>[1] Dlib C++ Library. http://dlib.net/.</li>
+  <li>[2] Alexey Dosovitskiy, Philipp Fischer, Eddy Ilg, Philip Hausser, Caner Hazirbas,
+  Vladimir Golkov, Patrick van der Smagt, Daniel Cremers, and Thomas Brox. 2015.
+  Flownet: Learning optical flow with convolutional networks. In ICCV.</li>
+  <li>Y. Fu, G. Guo, and T. S. Huang. 2010. Age synthesis and estimation via faces: a
+survey. TPAMI (2010)</li>
+</ul>
 
 
 
