--- a/projects/FaceAging.html
+++ b/projects/FaceAging.html
@@ -118,8 +118,18 @@ narrow range of ages.
   <li>[2] Alexey Dosovitskiy, Philipp Fischer, Eddy Ilg, Philip Hausser, Caner Hazirbas,
   Vladimir Golkov, Patrick van der Smagt, Daniel Cremers, and Thomas Brox. 2015.
   Flownet: Learning optical flow with convolutional networks. In ICCV.</li>
-  <li>Y. Fu, G. Guo, and T. S. Huang. 2010. Age synthesis and estimation via faces: a
+  <li>[3] Y. Fu, G. Guo, and T. S. Huang. 2010. Age synthesis and estimation via faces: a
 survey. TPAMI (2010)</li>
+<li>[4] Si Liu, Xinyu Ou, Ruihe Qian, Wei Wang, and Xiaochun Cao. 2016. Makeup like
+a superstar: Deep localized makeup transfer network. IJCAI (2016).</li>
+<li>[5] Si Liu, Yao Sun, Wei Wang, Defa Zhu, Xiangbo Zhu, and Shuicheng Yan. 2017.
+Face Aging with Contextual Generative Adversarial Nets. In ACM MM.</li>
+<li>[6] Shaoqing Ren, Kaiming He, Ross Girshick, and Jian Sun. 2015. Faster r-cnn:
+Towards real-time object detection with region proposal networks. In NIPS.</li>
+<li>[7] Zhen Wei, Yao Sun, Jinqiao Wang, Hanjiang Lai, and Si Liu. 2017. Learning
+Adaptive Receptive Fields for Deep Image Parsing Network. In CVPR.</li>
+<li>[8] Tianzhu Zhang, Changsheng Xu, and Ming-Hsuan Yang. 2017. Multi-task Correlation
+Particle Filter for Robust Visual Tracking. In CVPR.</li>
 </ul>
 
 
