--- a/people.html
+++ b/people.html
@@ -106,7 +106,7 @@ var _hmt = _hmt || [];
       <td> &nbsp; &nbsp;  &bull; Research Direction:</td>
     </tr>
    <tr>
-      <td> &nbsp; &nbsp;  &nbsp; Sematic Segmentation</td>
+      <td> &nbsp; &nbsp;  &nbsp; Semantic Segmentation</td>
     </tr>
    <tr>
       <td> &nbsp; &nbsp;  &nbsp; People Re-identification</td>
