--- a/people.html
+++ b/people.html
@@ -100,7 +100,7 @@ var _hmt = _hmt || [];
       <td> &nbsp; &nbsp; &bull; Head of S-Lab</td>
     </tr>
    <tr>
-      <td> &nbsp; &nbsp; &bull; Associate Professor, IIE, CAS</td>
+      <td> &nbsp; &nbsp; &bull; Associate Professor(SKLOIS, IIE, CAS)</td>
     </tr>
    <tr>
       <td> &nbsp; &nbsp;  &bull; Research Direction:</td>
