update the publication page with pdf files

--- a/publication.html
+++ b/publication.html
@@ -74,24 +74,24 @@ var _hmt = _hmt || [];
                               <div class="wrapper">
                                   <h4 class="extra">2017</h4>
                                   <p>------------------------  Journal Papers  ------------------------</p>
-                               <p> 1.Xinyu Ou, Hefei Ling, Han Yu, Si Liu. Adult Images and Videos Recognition by Deep Multi-Context Network and Fine-to-Coarse Strategy. ACM Transactions on Intelligent Systems and Technology (TIST) 2017</p>
-<p>2.	Xinyu Ou, Ping Li, Hefei Ling, Si Liu, Tianjiang Wang, Dan Li. Objectness Region Enhancement Networks for Scene Parsing. Journal of Computer Science and Technology (JCST)  2017</p>
+                               <p> 1.Xinyu Ou, Hefei Ling, Han Yu, Si Liu. Adult Images and Videos Recognition by Deep Multi-Context Network and Fine-to-Coarse Strategy. ACM Transactions on Intelligent Systems and Technology (TIST) 2017[<a href="pdf/Adult-TIST2017.pdf">Full paper</a>]</p>
+<p>2.	Xinyu Ou, Ping Li, Hefei Ling, Si Liu, Tianjiang Wang, Dan Li. Objectness Region Enhancement Networks for Scene Parsing. Journal of Computer Science and Technology (JCST)  2017[<a href="pdf/Objectness-JCST2017.pdf">Full paper</a>]</p>
 <p>3.	Yao Sun, Lejian Ren, Zhen Wei, Bin Liu, Yanlong Zhai, Si Liu, A weakly supervised method for makeup-invariant face verification. Pattern Recognition 2017
 </p>
-<p>4. Zhiyong Chen, Si Liu, Yanlong Zhai, Jia Lin, Xiaochun Cao, Liang Yang. Human Parsing by Weak Structural Label. Multimedia Tools and Applications 2017
+<p>4. Zhiyong Chen, Si Liu, Yanlong Zhai, Jia Lin, Xiaochun Cao, Liang Yang. Human Parsing by Weak Structural Label. Multimedia Tools and Applications 2017[<a href="pdf/10.1007_s11042-017-5368-4.pdf">Full paper</a>]
 </p>
 
 
  <p>------------------------ Conference Papers ------------------------</p>
-
+<p> 1. Si Liu, Yao Sun, Defa Zhu, Guanghui Ren, Yu Chen, Jiashi Feng, and Jizhong Han, Cross-domain Human Parsing via Adversarial Feature and Label Adaptation, AAAI 2018[<a href="pdf/17058-72879-2-SM.pdf">Full paper</a>]</p>
 <p> 1. Si Liu, Yao Sun, Wei Wang, Renda Bao, Defa Zhu, Xiangbo Zhu, and Shuicheng Yan, Face Aging with Contextual Generative Adversarial Nets, ACM MM 2017[<a href="pdf/faceaging-acmmm2017.pdf">Full paper</a>]</p>
-<p> 2. Bingke Zhu, Yingying Chen, Si Liu, Bo Zhang, Jinqiao Wang and Ming Tang， Fast Deep Matting for Portrait Animation on Mobile Phone， ACM MM 2017</p>
-<p> 3. Ting Liu, Yunchao Wei, Yao Zhao, Si Liu and Shikui Wei，Magic-wall: Visualizing Room Decoration， ACM MM 2017</p>
-<p> 4. Han Yu, Guanghui Ren, Ruihe Qian, Yao Sun,  Changhu Wang, Hanqing Lu  and Si Liu,  RSVP: A Real-Time Surveillance Video Parsing System with Single Frame Supervision， ACM MM 2017[<a href="pdf/rsvp-acmmm2017.pdf">Demo paper</a>][<a href="http://liusi-group.com/projects/RSVP">Details</a>]
+<p> 2. Bingke Zhu, Yingying Chen, Si Liu, Bo Zhang, Jinqiao Wang and Ming Tang， Fast Deep Matting for Portrait Animation on Mobile Phone， ACM MM 2017</p>[<a href="pdf/portrait-acmmm2017.pdf">Full paper</a>]</p>
+<p> 3. Ting Liu, Yunchao Wei, Yao Zhao, Si Liu and Shikui Wei，Magic-wall: Visualizing Room Decoration， ACM MM 2017</p>[<a href="pdf/faceagingmagicwall-acmmm2017.pdf">Full paper</a>]</p>
+<p> 4. Han Yu, Guanghui Ren, Ruihe Qian, Yao Sun, Changhu Wang, Hanqing Lu  and Si Liu,  RSVP: A Real-Time Surveillance Video Parsing System with Single Frame Supervision， ACM MM 2017[<a href="pdf/rsvp-acmmm2017.pdf">Demo paper</a>][<a href="http://liusi-group.com/projects/RSVP">Details</a>]
  </p>
- <p> 5. Lejian Ren, Si Liu, Yao Sun, JianDong,  Luoqi Liu and Shuicheng Yan， Time Traveler: a real-time face aging system， ACM MM 2017[[<a href="pdf/faceaging-demo-acmmm2017.pdf">Demo paper</a>]
+ <p> 5. Lejian Ren, Si Liu, Yao Sun, JianDong,  Luoqi Liu and Shuicheng Yan， Time Traveler: a real-time face aging system， ACM MM 2017[<a href="pdf/faceaging-demo-acmmm2017.pdf">Demo paper</a>]
  </p>
-<p> 6. Zhen Wei, Yao Sun, Jinqiao Wang, Hanjiang Lai, Si Liu, Learning Adaptive Receptive Fields for Deep Image Parsing Network, CVPR 2017. </p>
+<p> 6. Zhen Wei, Yao Sun, Jinqiao Wang, Hanjiang Lai, Si Liu, Learning Adaptive Receptive Fields for Deep Image Parsing Network, CVPR 2017. [<a href="pdf/AdaptiveReceptiveFields-cvpr2017.pdf">Demo paper</a>] </p>
 <p> 7.	Si Liu, Changhu Wang, Ruihe Qian, Han Yu, Renda Bao, Yao Sun, Surveillance Video Parsing with Single Frame Supervision, CVPR 2017 [<a href="pdf/Surveillance Video Parsing with Single Frame Supervision(final version).pdf">Paper</a>].[<a href="http://liusi-group.com/projects/SVP">Details</a>]</p>
 
                              </div>
